saves/test/demo_full_20240802_193545/history_shift/TBgen_codes/run_info.txt
iverilog simulation passed!

iverilog cmd 1:
~/iverilog/bin/iverilog -g2012 -o run.vvp history_shift_tb.v history_shift.v 
iverilog cmd 1 output:

iverilog cmd 1 error:

iverilog cmd 2:
~/iverilog/bin/vvp run.vvp
iverilog cmd 2 output:
history_shift_tb.v:150: $finish called at 370000 (1ps)

iverilog cmd 2 error:

